--- a/src/components/GiphyThumbnail/GiphyThumbnail.scss
+++ b/src/components/GiphyThumbnail/GiphyThumbnail.scss
@@ -1,25 +1,74 @@
 .giphy-thumbnail {
   display: inline-block;
   vertical-align: middle;
-  width: 25%;
+  margin: 0 15px 30px 15px;
 
-  .thumnail-container {
-    width: 100%;
-    position: relative;
+  .thumbnail-container {
+    padding: 10px;
     background-color: white;
-    padding: 20px;
+    width: calc(100% - 30px);
+    height: 200px;
 
-    img {
-      max-height: 100%;
-      max-width: 100%;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      margin-right: -50%;
-      transform: translate(-50%, -50%)
+    .img-prev-container {
+      position: relative;
+      background-color: #252525;
+      width: 100%;
+      height: 100%;
+      
+      img {
+        max-height: 99.8%;
+        max-width: 99.8%;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%)
+      }
     }
   }
   .user-container{
 
+  }
+}
+
+// 2 columns without user's info
+@media only screen and (max-width: 530px) {
+  .giphy-thumbnail {
+    width: 45%;
+    margin: 0 2.5% 20px 2.5%;
+    .thumbnail-container {
+      padding: 8px;
+      height: 120px;
+      .img-prev-container {
+        img {
+          max-height: 99%;
+          max-width: 99%;
+        }
+      }
+    }
+    .user-container{
+      display: none;  
+    }
+  }
+}
+
+// 3 columns
+@media only screen and (min-width: 530px) and (max-width: 820px)  {
+  .giphy-thumbnail {
+    width: calc(100% / 2 - 30px);
+  }
+}
+
+// 3 columns
+@media only screen and (min-width: 820px) and (max-width: 1050px)  {
+  .giphy-thumbnail {
+    width: calc(100% / 3 - 30px);
+  }
+}
+
+// 4 columns
+@media only screen and (min-width: 1050px) {
+  .giphy-thumbnail {
+    width: calc(100% / 4 - 30px);
   }
 }
