--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -5,4 +5,36 @@
   left: 0;
   width: 100%;
   height: 100%;
+  overflow-y: auto;
+  .giphy-grid {
+    margin: 80px auto;
+  }
+}
+
+// 2 columns without user's info
+@media only screen and (max-width: 530px) {
+  .giphy-grid {
+    max-width: 500px;
+  }
+}
+
+// 3 columns
+@media only screen and (max-width: 530px) and (min-width: 820px)  {
+  .giphy-grid {
+    max-width: 750px;
+  }
+}
+
+// 3 columns
+@media only screen and (max-width: 820px) and (min-width: 1050px)  {
+  .giphy-grid {
+    max-width: 1000px;
+  }
+}
+
+// 4 columns
+@media only screen and (min-width: 1050px) {
+  .giphy-grid {
+    max-width: 1250px;
+  }
 }
