--- a/src/components/GiphyThumbnail/GiphyThumbnail.scss
+++ b/src/components/GiphyThumbnail/GiphyThumbnail.scss
@@ -14,6 +14,7 @@
       background-color: #252525;
       width: 100%;
       height: 100%;
+      cursor: pointer;
       
       img {
         max-height: 99.8%;
