modify size for gif-viewer modal

--- a/src/modals/DefaultModal/DefaultModal.scss
+++ b/src/modals/DefaultModal/DefaultModal.scss
@@ -10,7 +10,7 @@
 
   .default-modal {
     position: absolute;
-    top: 45%;
+    top: 50%;
     left: 50%;
     min-width: 300px;
     transform: translate(-50%, -50%);
@@ -18,12 +18,41 @@
 
   .close-btn {
     position: absolute;
-    top: 2%;
-    right: 2%;
+    top: 5%;
+    right: 5%;
+    color: white;
     cursor: pointer;
     font-size: 20px;
   }
   .close-btn:hover {
     color: white;
+  }
+}
+
+// 2 columns without user's info
+@media only screen and (max-width: 530px) {
+  .default-modal {
+    width: 100%;
+  }
+}
+
+// 3 columns
+@media only screen and (min-width: 530px) and (max-width: 820px)  {
+  .default-modal {
+    width: 70%;
+  }
+}
+
+// 3 columns
+@media only screen and (min-width: 820px) and (max-width: 1050px)  {
+  .default-modal {
+    width: 60%;
+  }
+}
+
+// 4 columns
+@media only screen and (min-width: 1050px) {
+  .default-modal {
+    
   }
 }
