add owner's info and modify gif-viewer's styles

--- a/src/modals/DefaultModal/DefaultModal.scss
+++ b/src/modals/DefaultModal/DefaultModal.scss
@@ -30,14 +30,18 @@
 }
 
 // 2 columns without user's info
-@media only screen and (max-width: 530px) {
+@media only screen and (max-width: 480px) {
   .default-modal {
     width: 100%;
+  }
+  .close-btn {
+    top: 1% !important;
+    right: 1% !important;
   }
 }
 
 // 3 columns
-@media only screen and (min-width: 530px) and (max-width: 820px)  {
+@media only screen and (min-width: 480px) and (max-width: 820px)  {
   .default-modal {
     width: 70%;
   }
@@ -46,7 +50,7 @@
 // 3 columns
 @media only screen and (min-width: 820px) and (max-width: 1050px)  {
   .default-modal {
-    width: 60%;
+    width: 50%;
   }
 }
 
