--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -7,7 +7,19 @@
   height: 100%;
   overflow-y: auto;
   .giphy-grid {
-    margin: 80px auto;
+    margin: 80px auto 20px auto;
+  }
+  .load-more {
+    text-align: center;
+    color: #3a8bbb;
+    margin: 20px;
+    span {
+      cursor: pointer;
+      img {
+        width: 40px;
+        height: 40px;
+      }
+    }
   }
 }
 
