change load-more color and text

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -11,7 +11,7 @@
   }
   .load-more {
     text-align: center;
-    color: #3a8bbb;
+    color: black;
     margin: 20px;
     span {
       cursor: pointer;
