--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,13 +1,8 @@
 .home-container {
-  background-color: #f4f4f4;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  margin-top: 50px;
   overflow-y: auto;
   .giphy-grid {
-    margin: 80px auto 20px auto;
+    margin: 40px auto 20px auto;
   }
   .load-more {
     text-align: center;
