--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -8,6 +8,9 @@
     text-align: center;
     color: black;
     margin: 20px;
+    &:hover {
+      font-weight: bold;
+    }
     span {
       cursor: pointer;
       img {
